add class component

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: #81a69b;
-  background-image: url(http://pets-images.dev-apis.com/pets/wallpaperB.jpg);
+  background-image: url(https://);
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -44,16 +44,16 @@ body, #root {
 .search-params form {
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
   width: 360px;
-  margin: 0px 25px 0px 0px;
+  margin: 0 25px 0 0;
   padding: 35px 15px 15px 15px;
 }
 
 .search {
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
   width: 715px;
   padding: 15px;
   float: left;
@@ -61,13 +61,12 @@ body, #root {
 }
 
 .details {
-  width: 30%;
-  margin: 0 auto;
+  width: auto;
   padding: 15px;
-  margin-bottom: 25px;
+  margin: 0 auto 25px;
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
 }
 
 .pet {
@@ -104,24 +103,25 @@ body, #root {
   width: 100px;
   height: 100px;
   float: left;
-  margin: 0px 20px 0px 10px;
+  margin: 0 20px 0 10px;
 }
 
 .pet h1 {
   white-space: nowrap;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 400;
+  font-size: 15px;
   color: #333;
   width: 95%;
   overflow: hidden;
   margin: 0;
+  text-align: center;
   text-overflow: ellipsis;
 }
 
 header > a,
 #root > div > h1 {
   display: inline-block;
-  background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
+  background-image: url(https://);
   filter: brightness(150%);
   width: 279px;
   height: 76px;
@@ -135,6 +135,7 @@ header > a,
   font-weight: normal;
   font-size: 20px;
   margin: 0;
+  text-align: center;
   text-overflow: ellipsis;
 }
 
@@ -153,24 +154,24 @@ header {
   justify-content: center;
   width: 1100px;
   margin: 0 auto;
-  padding: 20px 0px 0px 0px;
+  padding: 20px 0 0 0;
 }
 
 .details p {
   line-height: 1.5;
-  padding: 0px 15px;
+  padding: 0 15px;
 }
 
 .details h1 {
   text-align: center;
   color: #333;
   font-size: 60px;
-  margin: 5px 0px;
+  margin: 5px 0;
 }
 
 .details h2 {
   text-align: center;
-  margin: 5px 0px 20px 0px;
+  margin: 5px 0 20px 0;
 }
 
 .carousel {
@@ -251,25 +252,12 @@ header {
   border: 1px solid cornflowerblue;
 }
 
-#modal {
-  background-color: rgba(0, 0, 0, 0.9);
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 #modal:empty {
   display: none;
 }
 
 #modal > div {
-  background-color: white;
   max-width: 500px;
   padding: 15px;
   text-align: center;
@@ -289,7 +277,7 @@ header {
     justify-content: center;
     width: 95%;
     margin: 0 auto;
-    padding: 20px 0px 0px 0px;
+    padding: 20px 0 0 0;
   }
 
   .search-params {
@@ -310,10 +298,9 @@ header {
 
   .details {
     width: auto;
-    margin: 0 auto;
     padding: 15px;
     border-radius: 9px;
-    margin-bottom: 25px;
+    margin: 0 auto 25px;
   }
 
   .info {
