--- a/src/style.css
+++ b/src/style.css
@@ -5,22 +5,25 @@
 
 body {
   background-color: #81a69b;
-  background-image: url(http://pets-images.dev-apis.com/pets/wallpaperB.jpg);
+  background-image: url(https://pets-images.dev-apis.com/pets/wallpaperB.jpg);
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .search-params {
-  width: 1100px;
+  width: 95%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-params form {
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
   width: 360px;
-  margin: 0px 25px 0px 0px;
+  margin: 0 25px 0 0;
   padding: 35px 15px 15px 15px;
   float: left;
 }
@@ -28,7 +31,7 @@ body {
 .search {
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
   width: 715px;
   padding: 15px;
   float: left;
@@ -37,21 +40,24 @@ body {
 
 .details {
   width: 1100px;
-  margin: 0 auto;
   padding: 15px;
-  margin-bottom: 25px;
+  margin: 0 auto 25px;
   border-radius: 6px;
   background: #faeff0;
-  box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
+  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
 }
 
 .pet {
   width: 100%;
-  height: 130px;
-  display: block;
+  height: 200px;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   overflow: hidden;
   margin: 25px 0;
-  border-bottom: #333 2px solid;
+  border-radius: 10px;
+  background-color: bisque;
 }
 
 .pet img {
@@ -73,7 +79,7 @@ body {
   width: 100px;
   height: 100px;
   float: left;
-  margin: 0px 20px 0px 10px;
+  margin: 0 20px 0 10px;
 }
 
 .pet h1 {
@@ -90,7 +96,7 @@ body {
 header > a,
 #root > div > h1 {
   display: inline-block;
-  background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
+  background-image: url(https://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
   filter: brightness(150%);
   width: 279px;
   height: 76px;
@@ -100,9 +106,9 @@ header > a,
 }
 
 .pet h2 {
-  white-space: nowrap;
+  white-space: pre;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 15px;
   margin: 0;
   text-overflow: ellipsis;
 }
@@ -122,24 +128,24 @@ header {
   justify-content: center;
   width: 1100px;
   margin: 0 auto;
-  padding: 20px 0px 0px 0px;
+  padding: 20px 0 0 0;
 }
 
 .details p {
   line-height: 1.5;
-  padding: 0px 15px;
+  padding: 0 15px;
 }
 
 .details h1 {
   text-align: center;
   color: #333;
   font-size: 60px;
-  margin: 5px 0px;
+  margin: 5px 0;
 }
 
 .details h2 {
   text-align: center;
-  margin: 5px 0px 20px 0px;
+  margin: 5px 0 20px 0;
 }
 
 .carousel {
@@ -238,7 +244,6 @@ header {
 }
 
 #modal > div {
-  background-color: white;
   max-width: 500px;
   padding: 15px;
   text-align: center;
@@ -258,11 +263,14 @@ header {
     justify-content: center;
     width: 95%;
     margin: 0 auto;
-    padding: 20px 0px 0px 0px;
+    padding: 20px 0 0 0;
   }
 
   .search-params {
     width: 95%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
   }
 
   .search-params form {
@@ -279,10 +287,9 @@ header {
 
   .details {
     width: 95%;
-    margin: 0 auto;
     padding: 15px;
     border-radius: 9px;
-    margin-bottom: 25px;
+    margin: 0 auto 25px;
   }
 
   .info {
@@ -316,7 +323,11 @@ header {
 
 @media only screen and (max-width: 600px) {
   .pet {
-    height: 200px;
+    width: 100%;
+    padding: 2px 15px;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
   }
 
   .info {
